Sat Feb  1 14:21:38 2003  Ossama Othman  <ossama@uci.edu>

	* configure.ac:

	  Added gperf related Makefiles to the list of files to generate.

	* apps/Makefile.am:
	* apps/gperf/Makefile.am:
	* apps/gperf/src/Makefile.am:

	  Updated for use with Automake 1.7.x or better.

	* m4/ace.m4 (ACE_CONFIGURATION_OPTIONS):

	  Enabled ACE gperf support.

Sat Feb  1 13:22:59 2003  Ossama Othman  <ossama@uci.edu>

	* bin/bootstrap:

	  Removed workspace/release bootstrapping code.  Newer versions of
	  automake obviate the need to make a distinction due to improved
	  dependency tracking support.

Sat Feb  1 13:14:08 2003  Ossama Othman  <ossama@uci.edu>

	* ace/Makefile.am (TEMPLATE_FILES):

	  Added missing "Templates_Instantiations.cpp" file to this list.
	  Fixes builds from a source tree created by "make dist".

Sat Feb  1 12:44:52 2003  Ossama Othman  <ossama@uci.edu>

	* Makefile.am (EXTRA_DIST):

	  Removed "BIBLIOGRAPHY" from this list since that file no longer
	  exists.  "make dist" now works once again.

Sat Feb  1 12:40:11 2003  Ossama Othman  <ossama@uci.edu>

	* ace/Makefile.am (libACE_Utils_la_SOURCES):

	  Removed duplicate "Filecache.cpp" entry.  Fixes "multiple
	  definition of symbol" errors at link-time.

Sat Feb  1 12:24:11 2003  Ossama Othman  <ossama@uci.edu>

	* configure.ac:

	  Do not define the _POSIX_THREADS and
	  _POSIX_THREAD_SAFE_FUNCTIONS preprocessor macros.  They are
	  feature test macros defined by the platform, and are not meant
	  to be defined by anything other than the platform itself.

	* m4/config_h.m4 (ACE_PREP_CONFIG_HEADER):

	  Fixed autoheader templates for the ACE_UINT64_TYPEDEF and
	  _POSIX_PTHREAD_SEMANTICS macros so that they include a "#undef
	  ..." in the template.  Without the "#undef" the value of the
	  macro will not be substituted by `configure' script.  That led
	  to build failures.  Those failures have been corrected by this
	  fix.

	  Removed autoheader templates for the _POSIX_THREADS and